# facial-emotion-recognition

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: emotion-image-recognition.ipynb
src/: model.py
